RichwoodNew/src/objects/Account_Yearly_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Yearly Forecasts</relationshipLabel>
        <relationshipName>Account_Yearly_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Budgeted_Sales__c</fullName>
        <label>Budgeted Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgeted__c</fullName>
        <label>Budgeted</label>
        <summarizedField>Forecast_Product_Category__c.Budgeted_Sales__c</summarizedField>
        <summaryForeignKey>Forecast_Product_Category__c.Account_Yearly_Forecast__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Forecast_Period_Start__c</fullName>
        <label>Forecast Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast_Status__c</fullName>
        <label>Forecast Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preparation</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Adjustment Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Budgeted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projected_Amount__c</fullName>
        <label>Projected Amount</label>
        <summarizedField>Forecast_Product_Category__c.Projected_Amount__c</summarizedField>
        <summaryForeignKey>Forecast_Product_Category__c.Account_Yearly_Forecast__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Account Yearly Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Projected_Amount__c</columns>
        <columns>Budgeted_Sales__c</columns>
        <columns>Forecast_Status__c</columns>
        <columns>Forecast_Period_Start__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Forecast_Period_Start__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2017</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Yearly Forecast</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Yearly Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>